# aimr

./: CMakeLists.txt  package.xml
include/aimr/: fuzzy.h  fuzzy_velocity.h
src/: fuzzy.cpp  fuzzy_goto.cpp  fuzzy_velocity.cpp  fuzzy_wall_follow.cpp  fuzzy_waypoints_follower.cpp
